fix: edit navbar for tablet mode.  - navbar changes layout to a flex container with space-between.  - Mobile navbar becomes visible at max-width: 775px  - Changes to VOVOCA icon in navbar for better layout and responsiveness.

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -4,9 +4,14 @@
   font-size: 2vw;
   line-height: 2vw;
   text-shadow: 0 0 1vw #4ce2ec;
-  padding-top: 1.1em;
-  margin-left: 5%;
   cursor: pointer;
+  margin-left: 1rem;
+}
+
+.neon__container {
+  display:flex;
+  align-items: center;
+  height: 100%;
 }
 
 .neon {
@@ -14,10 +19,14 @@
   -moz-animation: neon 5s ease infinite;
   -webkit-animation: neon 5s ease infinite;
 }
+
+.nav__bar {
+  margin-right: 1rem;
+}
+
 .nav__items {
   list-style: none;
   display: flex;
-  margin: 30px;
   position: relative;
   z-index: 2;
 }
@@ -57,10 +66,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 75px !important;
+  /* height: 75px !important; */
   z-index: 100;
-  padding-top: 51px;
-  padding-bottom: 51px;
+  /* padding-top: 51px; */
+  /* padding-bottom: 51px; */
 }
 .scroll__header .neon{
   padding-top: unset;
@@ -69,12 +78,7 @@
 .mobile__header,.dashnav_mobile {
   display: none;
 }
-@media  (max-width: 1300px) {
-  .neon{
-    padding-top: 1.5em;
-  }
-}
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 775px) {
   .navbar__box {
     display: none;
   }
@@ -157,5 +161,20 @@
     text-shadow: 0 0 0.8vw #cac70d, 0 0 1.5vw #800e0b, 0 0 5vw #d39d28,
       0 0 5vw #800e0b, 0 0 0.2vw #800e0b, 0.5vw 0.5vw 0.1vw #40340a;
     color: #ebc886;
+  }
+}
+
+/* Navbar rules for Tablet Mode */
+@media only screen and ( max-width: 898px) {
+  .list__items {
+    margin: 0;
+  }
+  .nav__bar {
+    width: 100%;
+    padding-left: 1rem;
+  }
+  .nav__items {
+    display: flex;
+    justify-content: space-between;
   }
 }
